# wiederverwendbar

./: .\CHANGELOG.md  .gitchangelog.rc  .gitignore  .space.kts  CHANGELOG.md  README.md  celery-test-beat.sh  celery-test-worker.sh  docker-compose.yml  pyproject.toml  sample.env
.github/workflows/: build_and_publish.yml  test_and_changelog.yml  workflow.yml
docker/: Dockerfile  healthcheck.sh
examples/: __init__.py  branding.py  fastapi_settings.py  file_config.py  logger.py  rich_console.py  singletons.py  task_manager.py  timer.py  typer_branding.py  typer_settings.py  uvicorn_server.py  version.py
examples/branding/: app.py
examples/celery_test/: app.py  docker-compose.yml  requirements.txt  sample.env
examples/celery_test/docker/: Dockerfile  entrypoint.sh
examples/celery_test/tasks/: __init__.py  base.py
examples/fastapi/: app.py  router.py
examples/fastapi_example/: api.py  app.py  router.py  settings.py
examples/logger_context/: example.py
examples/mongoengine/: db.py
examples/nicegui_example/: app.py
examples/pydantic/: file.py
examples/pydantic_examples/: version.py
examples/sqlalchemy/: db.py
examples/typer_example/: app.py  sub.py
incubator/: file_config.py  file_config_v3.py
incubator/updater/: version_file.py
merge/celery-test/: README.md  sample.env
merge/celery-test/docker/: celery.py
src/celery_test/: __init__.py  __main__.py  app.py  client.py
src/kdsm_poller/: __init__.py  __main__.py
src/kdsm_poller/classes/: settings.py
src/kdsm_poller/task_manger/: __init__.py  manager.py  task.py  trigger.py
src/wiederverwendbar/: __init__.py  singleton.py  version.py
src/wiederverwendbar/branding/: app.py  settings.py
src/wiederverwendbar/console/: console.py  settings.py
src/wiederverwendbar/examples/: console.py  logger.py  rich_console.py
src/wiederverwendbar/fastapi/: __init__.py  app.py  dependencies.py  settings.py
src/wiederverwendbar/functions/: admin.py  datetime.py
src/wiederverwendbar/incubator/: config.json  file_config.py
src/wiederverwendbar/logger/: context.py  log_levels.py  logger_context.py  logger_singleton.py  redirect_level.py  settings.py
src/wiederverwendbar/mongoengine/: __init__.py  db.py  settings.py
src/wiederverwendbar/nicegui/: __init__.py  app.py  settings.py
src/wiederverwendbar/pydantic/: __init__.py  file_config.py
src/wiederverwendbar/rich/: __init__.py  console.py  settings.py
tests/: fastapi_test.py  file.py  frontend.py  nicegui_so.py  search.py  shared.py  singletons.py  task_manager.py  worker.py
tests/first_version/: admin_action_log.py
tests/mongoengine_auth/: directory_enum.py  server.py
tests/nicegui_test/: api.py  app.py  router.py  settings.py  ui.py
tests/second_version/: server.py
tests/third_version/: server.py
(+92 files in other folders)
