[project]
name = "celery-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Julius Koenig", email = "julius@koenig-site.de"},
]
dependencies = ["celery[redis]>=5.5.3", "flower>=2.0.1", "sqlalchemy>=2.0.41", "pymysql>=1.1.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "GPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
