[project]
name = "wiederverwendbar"
dynamic = ["version"]
description = "A collection of scripts, classes and tools they are \\\"wiederverwendbar\\\"."
authors = [
    { name = "Julius Koenig", email = "info@bastelquartier.de" },
]
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "devtools>=0.12.2",
]
requires-python = ">=3.9" # ToDo: drop support for Python 3.9 in the future
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
full = [
    "rich>=14.1.0",
    "typer>=0.16.0",
    "pythonping>=1.1.4",
    "mongoengine>=0.29.1",
    "nicegui>=2.21.1",
    "uvicorn>=0.35.0",
    "fastapi>=0.116.1",
    "starlette-admin[i18n]>=0.15.1",
    "pillow>=11.3.0",
    "blinker>=1.9.0",
    "kombu>=5.5.4",
    "nest-asyncio>=1.6.0",
    "sqlalchemy>=2.0.42",
    "art>=6.5",
    "email-validator>=2.2.0",
]
rich = [
    "rich>=14.1.0",
]
typer = [
    "typer>=0.16.0",
    "art>=6.5",
    "rich>=14.1.0",
]
mongoengine = [
    "mongoengine>=0.29.1",
    "blinker>=1.9.0",
]
uvicorn = [
    "uvicorn>=0.35.0",
]
fastapi = [
    "fastapi>=0.116.1",
    "email-validator>=2.2.0",
]
nicegui = [
    "nicegui>=2.21.1",
]
starlette-admin = [
    "starlette-admin[i18n]>=0.15.1",
    "pillow>=11.3.0",
    "kombu>=5.5.4",
    "nest-asyncio>=1.6.0",
]
fuctions = [
    "pythonping>=1.1.4",
]
sqlalchemy = [
    "sqlalchemy>=2.0.42",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/wiederverwendbar/__init__.py"

[tool.pdm.scripts]
push-tags = { shell = "git push origin --tags" }
